k8s/homelab/media/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - namespace: envoy-gateway-system
      name: gateway-local
    - namespace: envoy-gateway-system
      name: gateway-tailscale
  hostnames:
    - jellyfin.hs.liquid.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          namespace: jellyfin
          name: jellyfin
          port: 8096
